# mail-service

./: Makefile  client.py  dependency.py  main.py  pyproject.toml  schemas.py  service.py  settings.py  utils.py
